--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,10 @@
     <!--</distributionManagement>-->
 
   <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-   <finalName>${project.artifactId}-${project.version}</finalName>
+    <finalName>${project.artifactId}-${project.version}</finalName>
   </properties>
 
   <dependencies>
