--- a/src/main/resources/sharpen.properties
+++ b/src/main/resources/sharpen.properties
@@ -28,4 +28,5 @@
 25=-junitConversion: JUnit conversion mode on
 26=-sharpenNamespace: Maps a java package name to a .NET namespace. For example:-namespaceMapping java.util.concurrent.locks Sharpen
 27=-flatDirectoryStructure: Flat namespace directory structure mode on. For example: "sharpen.core" package will go into a folder named "sharpen.core" and sub-folders won't be created like "sharpen/core"
-28=-help: Display Help
+28=-egyptianBrackets: Java-style brackets. For example: -egyptianBrackets
+29=-help: Display Help
