--- a/src/main/resources/sharpen.properties
+++ b/src/main/resources/sharpen.properties
@@ -1,4 +1,3 @@
-
 111=It can be called by providing absolute source java project source path. For example: >java -jar sharpencore-0.0.1-SNAPSHOT-jar-with-dependencies.jar D:\\JavaProject\\src
 222=All valid command line can be input through a file. For example all command is in file named-sharpen-all-options: >java -jar sharpencore-0.0.1-SNAPSHOT-jar-with-dependencies.jar D:\\JavaProject\\src  @D:\\ProjectConfig\\sharpen-all-options
 1=-pascalCase: Converts Java identifiers to Pascal case. For example:-pascalCase
@@ -17,17 +16,18 @@
 14=-namespaceMapping: Maps a java package name to a .NET namespace. For example: -namespaceMapping java.security Sharpen
 15=-methodMapping: Maps a java method name to a .NET method (can be method in another class). For example: -methodMapping java.math.BigInteger.toByteArray GetBytes
 16=-typeMapping: Maps a java class to .NET type. For Example:-typeMapping java.util.Enumeration System.Collections.Generic.IEnumeration
-17=-propertyMapping: Maps a java method to .NET property. For Example: -propertyMapping java.net.Socket.isConnected Connected
-18=-runtimeTypeName: Name of the runtime class. The runtime class provides implementation for methods that don't have a direct mapping or that are simpler to map at the language level than at the sharpen level. For instance: String.substring, String.valueOf, Exception.printStackTrace, etc.
-19=-header: Header comment to be added to all converted files. For example:-header D:\\config\\copyright_comment.txt
-20=-xmldoc: Specifies an xml- overlay file, which overrides javadoc documentation for specific classes. For example: -xmldoc D:\\Config\\ApiOverlay.xml
-21=-eventMapping: Converts the methods to an event.
-22=-eventAddMapping: Marks the method as an event subscription method. Invocations to the method in the form <target>.method(<argument>) will be replaced by the c# event subscription idiom: <target> += <argument>
-23=-conditionalCompilation: Conditional compilation based on package name/source top (packages) are applied to the full compilation unit (everything will be enclosed by the conditional compilation). For example: -conditionalCompilation com.avasp.disply NOTUSEDCODE
-24=-configurationClass: Overwrites default configuration Class with input class name. The default is 'sharpen.core.DefaultConfiguration'. For example: -configurationClass sharpen.core.MyConfiguration
-25=-junitConversion: JUnit conversion mode on
-26=-sharpenNamespace: Maps a java package name to a .NET namespace. For example:-namespaceMapping java.util.concurrent.locks Sharpen
-27=-flatDirectoryStructure: Flat namespace directory structure mode on. For example: "sharpen.core" package will go into a folder named "sharpen.core" and sub-folders won't be created like "sharpen/core"
-28=-egyptianBrackets: Java-style brackets. For example: -egyptianBrackets
-29=-outputFolder: set output folder. For example: -outputFolder d:\\out
-30=-help: Display Help
+17=-typeIgnore: Ignores given class or annotation from generation. May be used together with -typeMapping. For example: -typeIgnore org.jetbrains.annotations.Nullable
+18=-propertyMapping: Maps a java method to .NET property. For Example: -propertyMapping java.net.Socket.isConnected Connected
+19=-runtimeTypeName: Name of the runtime class. The runtime class provides implementation for methods that don't have a direct mapping or that are simpler to map at the language level than at the sharpen level. For instance: String.substring, String.valueOf, Exception.printStackTrace, etc.
+20=-header: Header comment to be added to all converted files. For example:-header D:\\config\\copyright_comment.txt
+21=-xmldoc: Specifies an xml- overlay file, which overrides javadoc documentation for specific classes. For example: -xmldoc D:\\Config\\ApiOverlay.xml
+22=-eventMapping: Converts the methods to an event.
+23=-eventAddMapping: Marks the method as an event subscription method. Invocations to the method in the form <target>.method(<argument>) will be replaced by the c# event subscription idiom: <target> += <argument>
+24=-conditionalCompilation: Conditional compilation based on package name/source top (packages) are applied to the full compilation unit (everything will be enclosed by the conditional compilation). For example: -conditionalCompilation com.avasp.disply NOTUSEDCODE
+25=-configurationClass: Overwrites default configuration Class with input class name. The default is 'sharpen.core.DefaultConfiguration'. For example: -configurationClass sharpen.core.MyConfiguration
+26=-junitConversion: JUnit conversion mode on
+27=-sharpenNamespace: Maps a java package name to a .NET namespace. For example:-namespaceMapping java.util.concurrent.locks Sharpen
+28=-flatDirectoryStructure: Flat namespace directory structure mode on. For example: "sharpen.core" package will go into a folder named "sharpen.core" and sub-folders won't be created like "sharpen/core"
+29=-egyptianBrackets: Java-style brackets. For example: -egyptianBrackets
+30=-outputFolder: set output folder. For example: -outputFolder d:\\out
+31=-help: Display Help
