-copySharpenCs: Copy Sharpen.cs into outputFolder or not, true by default. For example -copySharpenCs false clazz.getSimpleName() returns name without generic (like Java)

--- a/src/main/resources/sharpen.properties
+++ b/src/main/resources/sharpen.properties
@@ -30,4 +30,5 @@
 28=-flatDirectoryStructure: Flat namespace directory structure mode on. For example: "sharpen.core" package will go into a folder named "sharpen.core" and sub-folders won't be created like "sharpen/core"
 29=-egyptianBrackets: Java-style brackets. For example: -egyptianBrackets
 30=-outputFolder: set output folder. For example: -outputFolder d:\\out
-31=-help: Display Help
+31=-copySharpenCs: Copy Sharpen.cs into outputFolder or not, true by default. For example -copySharpenCs false
+32=-help: Display Help
