--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: java
 jdk:
   - oraclejdk8
-script: mvn -DfinalName=sharpen test -q
+mono:
+  - 3.12.0
+script: mvn -DfinalName=sharpen integration-test -q -Pintegration
 
 deploy:
   provider: releases
