--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ mono:
   - 3.12.0
 script: mvn -DfinalName=sharpen integration-test -q -Pintegration
 
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y mono-complete
+
 deploy:
   provider: releases
   api_key:
