--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
                                         </java>
 
                                         <echo message="Compile converted C# tests"/>
-                                        <exec executable="mcs" failonerror="true">
+                                        <exec executable="/usr/bin/mcs" failonerror="true">
                                             <arg value="-target:library"/>
                                             <arg value="-r:nunit.framework"/>
                                             <arg value="-out:${project.build.directory}/UnityIntegrationTestsProject/Tests.dll"/>
@@ -198,7 +198,7 @@
                                         </exec>
 
                                         <echo message="Run converted C# tests"/>
-                                        <exec executable="nunit-console" failonerror="true">
+                                        <exec executable="/usr/bin/nunit-console" failonerror="true">
                                             <arg value="${project.build.directory}/UnityIntegrationTestsProject/Tests.dll"/>
                                             <arg value="-xml:${project.build.directory}/UnityIntegrationTestsProject/TestsResult.xml"/>
                                         </exec>
