--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,14 @@
 language: java
+
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
+      - mono-complete
+      - nunit-console
+
 jdk:
   - oraclejdk8
-mono:
-  - 3.12.0
-script: mvn -DfinalName=sharpen test -q -Pintegration
 
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y mono-complete
-  - sudo apt-get install -y nunit-console
-
-deploy:
-  provider: releases
-  api_key:
-    secure: qZtmVlKGoFdfKvSJNzn79M08KfZCatymHuhfXwn5ZdoDh5D3tqr5Z14e+uVo0DVWZuWT0RVBGFJCqL2w4xve7NNizd0Y5mkfkaZJDlyH3EPhG/EA8X/zU+28c3qk/AJnaWm0C99772C+YiFIsGu7KCC4URA0jmu5+XN9ND3mynA=
-  file: 
-    - src/target/sharpen-jar-with-dependencies.jar
-    - code_quality_report.txt
-  on:
-    repo: imazen/sharpen
-    all_branches: true
-    tags: true
-after_success:
-  - mvn install -q -Pqulice -DskipTests -DfinalName=sharpen > code_quality_report.txt || true
+script:
+  - mvn install -Pintegration
